Sidebar visibility but bug found i.e maximum stack exceed redux

--- a/src/Components/QuickGuide/Index.css
+++ b/src/Components/QuickGuide/Index.css
@@ -1,5 +1,5 @@
 .quick_guide{
     height:100vh;
+    width:100%;
     display:flex;
-    flex-direction:column;
 }
