--- a/src/Components/QuickGuide/Sidebar/Index.css
+++ b/src/Components/QuickGuide/Sidebar/Index.css
@@ -1,11 +1,20 @@
 .quick_guide_sidebar{
-    width:350px;
+    width:500px;
     height:100%;
     background: #FFFBF6;
     border-top-right-radius: 20px;
     box-shadow: 1px 0px 5px 2px rgba(197, 197, 197, 0.47);
     -webkit-box-shadow: 1px 0px 5px 2px rgba(192, 192, 192, 0.47);
     -moz-box-shadow: 1px 0px 5px 2px rgba(196, 196, 196, 0.47);
+}
+.quick_guide_sidebar #closeSidebar{
+    cursor:pointer;
+    transition:0.3s ease-in-out;
+}
+.quick_guide_sidebar
+#closeSidebar:hover{
+    transform:rotate(90deg);
+    opacity:0.5;
 }
 
 .quick_guide_sidebar
